--- a/opendj-bom/pom.xml
+++ b/opendj-bom/pom.xml
@@ -13,6 +13,8 @@
   information: "Portions Copyright [year] [name of copyright owner]".
 
   Copyright 2011-2016 ForgeRock AS.
+  
+  Portions Copyright 2018 Athesys.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -20,8 +22,8 @@
     <parent>
         <groupId>org.forgerock</groupId>
         <artifactId>forgerock-parent</artifactId>
-        <version>2.0.10</version>
-        <relativePath />
+        <version>2.0.6</version>
+        <relativePath>../forgerock-parent</relativePath>
     </parent>
 
     <groupId>org.forgerock.opendj</groupId>
@@ -45,7 +47,7 @@
             <dependency>
                 <groupId>org.forgerock.commons</groupId>
                 <artifactId>commons-bom</artifactId>
-                <version>21.0.0-alpha-17</version>
+                <version>21.0.0-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -99,7 +101,7 @@
     </dependencyManagement>
 
     <repositories>
-        <repository>
+        <!-- <repository>
             <id>forgerock-staging-repository</id>
             <name>ForgeRock Release Repository</name>
             <url>http://maven.forgerock.org/repo/releases</url>
@@ -114,7 +116,7 @@
             <releases>
                 <enabled>false</enabled>
             </releases>
-        </repository>
+        </repository> -->
         <repository>
             <id>jvnet-nexus-snapshots</id>
             <url>https://maven.java.net/content/repositories/snapshots</url>
