--- a/opendj-server-legacy/pom.xml
+++ b/opendj-server-legacy/pom.xml
@@ -156,6 +156,7 @@
     <dependency>
       <groupId>org.forgerock.commons</groupId>
       <artifactId>forgerock-audit-handler-json</artifactId>
+      <version>21.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -231,7 +232,7 @@
     <dependency>
       <groupId>org.forgerock.commons</groupId>
       <artifactId>forgerock-persistit-core</artifactId>
-      <version>4.3.2-SNAPSHOT</version>
+      <version>4.3.1</version>
     </dependency>
 
     <dependency>
@@ -996,8 +997,8 @@
                 <exclude>**/*_zh_TW.properties</exclude>
                 <exclude>org/slf4j/**</exclude>
                 <exclude>org/opends/server/loggers/slf4j/OpenDJLogger*</exclude>
-                <exclude>org/opends/server/backends/jeb/**</exclude>
-                <exclude>org/opends/server/replication/server/changelog/je/**</exclude>
+                <!-- <exclude>org/opends/server/backends/jeb/**</exclude>
+                <exclude>org/opends/server/replication/server/changelog/je/**</exclude> -->
               </excludes>
               <archive>
                 <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
