--- a/opendj-server-legacy/pom.xml
+++ b/opendj-server-legacy/pom.xml
@@ -167,6 +167,7 @@
     <dependency>
       <groupId>org.forgerock.commons</groupId>
       <artifactId>forgerock-audit-handler-splunk</artifactId>
+      <version>21.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
